--- a/public/index.html
+++ b/public/index.html
@@ -6,12 +6,10 @@
   <link rel="icon" href="img/logo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description"
-    content="Senso Crítico, notícias e análises sobre política, economia, cultura e sociedade." />
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-
-
+  <meta name="description" content="Senso Crítico, notícias e análises sobre política, economia, cultura e sociedade." />
   <title>Senso Crítico</title>
+  <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-brands/css/uicons-brands.css'>
+  <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-regular-rounded/css/uicons-regular-rounded.css'>
 </head>
 
 <body>
