--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Senso Crítico, notícias e análises sobre política, economia, cultura e sociedade." />
-  
+  <meta name="image" content="https://sensoc.vercel.app/img/background.jpg" />
+
   <title>Senso Crítico</title>
   <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-brands/css/uicons-brands.css'>
   <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-regular-rounded/css/uicons-regular-rounded.css'>
